<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home64"
        android:title="@string/beranda" />
    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/bell64"
        android:title="@string/info" />
    <item
        android:id="@+id/navigation_tulis"
        android:icon="@drawable/tulis64"
        android:title="@string/tulis" />
    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/chat64"
        android:title="@string/psn" />
    <item
        android:id="@+id/navigation_akun"
        android:icon="@drawable/akun64"
        android:title="@string/akun" />

</menu>
